public/assets/css/style.css
/* ... */
.sidebar .side-menu .active a .menu-icon {
    color: #9b7fff;
}
.sidebar .side-menu .active a .menu-icon {
    -webkit-filter: none;
    filter: none;
}

.sidebar .side-menu .active .dropdown-menu .active .submenu-icon {
    -webkit-filter: brightness(0) invert(1);
    filter: brightness(0) invert(1);
}
.sidebar .side-menu .dropdown-toggle::after {
    position: absolute;
    right: 10px;
    top: 22px;
}
.sidebar .side-menu .dropdown-menu {
    position: relative !important;
    -webkit-transform: none !important;
    transform: none !important;
    -webkit-box-shadow: 0 0 0;
    box-shadow: 0 0 0;
    float: none;
    background: transparent;
    margin-left: 28px;
}
.sidebar .side-menu .dropdown-menu .dropdown-item {
    font-weight: 400;
    padding: 4px 22px;
    background: transparent !important;
}
.right-content {
    margin-left: 280px;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
}
{{-- JAILAOI: Submenu dark --}}
.sidebar .side-menu .side-submenu a {
    color: var(--sidebar-a-color);
    display: block;
    padding: 7px 12px;
    position: relative;
    margin: 2px 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    cursor: pointer;
    border-radius: 8px;
    font-size: 13px;
}
.sidebar .side-menu .side-submenu .active {
    background: rgba(108,71,255,0.18);
    border-radius: 8px;
    color: #b39dff;
    padding: 0;
}
.sidebar .side-menu .side-submenu a:hover {
    color: #fff;
    background: rgba(255,255,255,0.06);
}
.sidebar .side-menu .side-submenu .active a {
    color: #b39dff;
}
@media (min-width: 1680px) {
    .right-content {
        margin-left: 300px;
    }
}
.right-content.right-content-0 {
    margin-left: 80px;
}
.right-content.right-content-0 .header .title-control .side-toggle {
    display: none;
}
.header {
    position: sticky;
    -webkit-position: -webkit-sticky;
    top: 0;
    background: var(--white-color);
    z-index: 22;
    padding: 25px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
@media (min-width: 1680px) {
    .header {
        padding: 35px;
    }
}
.header .title-control {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    justify-content: flex-start;
}
.header .title-control .side-toggle {
    margin-right: 15px;
    display: none;
}
.header .page-title {
    font-size: 30px;
    font-weight: 600;
    margin: 0;
}
.header .input-group {
    border: 1px solid var(--input-group-color);
    border-radius: 100px;
    width: 550px;
    max-width: 100%;
}
.header .input-group .input-group-text,
.header .input-group .form-control {
    background: transparent;
    border: 0;
    -webkit-box-shadow: 0 0 0;
    box-shadow: 0 0 0;
}
.header .input-group .input-group-text img,
.header .input-group .form-control img {
    width: 20px;
    margin: 0 5px;
}
.header .input-group .form-control {
    font-size: 14px;
    padding: 12px 6px;
}
.header .side-logo {
    display: none;
}
.header .head-control {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    justify-content: flex-end;
}
.header .head-control .head-btn {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    height: 45px;
    width: 45px;
    padding: 0;
    border-radius: 8px;
    overflow: hidden;
    margin-left: 15px;
    -webkit-box-shadow: 0 15px 35px var(--dark-color);
    box-shadow: 0 15px 35px var(--dark-color);
}
.avatar-img {
    height: 100%;
    width: 100%;
    -o-object-fit: cover;
    object-fit: cover;
}
.body-content {
    padding: 25px;
}
.box-title {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    border-bottom: 1px solid var(--border-bottom-color);
    padding-bottom: 10px;
    margin-top: 20px;
}
.box-title .title {
    font-size: 20px;
    font-weight: 600;
    margin: 5px 0;
}
.avatar-control {
    overflow: hidden;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
.avatar-control .avatar-img {
    height: 40px;
    width: 40px;
    border-radius: 50%;
}
.table-striped tbody tr:nth-of-type(odd) {
    background-color: transparent;
}
.table-striped tbody tr:nth-of-type(even) {
    background-color: var(--table-th-tr-color);
}
.table {
    border-color: var(--light-color);
    color: var(--table-color);
    min-width: 650px;
}
.table thead th {
    font-size: 14px;
    font-weight: 600;
    border-top: 0;
    border-bottom: 1px solid var(--light-color);
}
.table td {
    font-size: 14px;
    border-bottom: 1px solid var(--light-color);
    border-top: 0;
    vertical-align: middle;
}
.table .avatar-img {
    margin-right: 10px;
}
/* ... */

